<?xml version="1.0" encoding="utf-8"?>
<com.flyco.roundview.RoundLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:background="@color/white"
        android:orientation="vertical"
        app:rv_backgroundColor="@color/white"
        app:rv_cornerRadius_TL="@dimen/px30"
        app:rv_cornerRadius_TR="@dimen/px30"
        android:padding="@dimen/px20">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/cancel"
                android:id="@+id/tv_cancel"
                android:padding="@dimen/px20"
                android:layout_weight="1"
                android:textColor="@color/gray_999999"
                style="@style/Tv15gray"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bt_submit"
                android:text="@string/send"
                android:textColor="@color/gray_B4B4B4"
                android:padding="@dimen/px20"
                style="@style/Tv15gray"/>

    </LinearLayout>

    <View
            style="@style/divider_1"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_text"
            android:hint="@string/yyc2"
            android:gravity="top|left"
            android:background="@null"
            android:padding="@dimen/px20"
            android:minLines="6"
            android:textSize="@dimen/size30"
            android:maxLength="200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <View
            style="@style/divider_1"/>

</com.flyco.roundview.RoundLinearLayout>