<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        tools:ignore="MissingConstraints"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_img"
            android:layout_width="match_parent"
            android:background="@mipmap/y50"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_set"
            android:layout_marginTop="@dimen/px80"
            android:layout_marginRight="@dimen/px40"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:background="@mipmap/y49"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_msg"
            app:layout_constraintTop_toTopOf="@id/iv_set"
            app:layout_constraintBottom_toBottomOf="@id/iv_set"
            app:layout_constraintRight_toLeftOf="@id/iv_set"
            android:layout_marginRight="@dimen/px60"
            android:layout_width="wrap_content"
            android:background="@mipmap/y43"
            android:layout_height="wrap_content"/>

    <com.yc.yyc.weight.CircleImageView
            android:id="@+id/iv_head"
            android:layout_marginTop="@dimen/px60"
            app:layout_constraintTop_toBottomOf="@id/iv_msg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@mipmap/y51"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_marginTop="@dimen/px20"
            app:layout_constraintTop_toBottomOf="@id/iv_head"
            app:layout_constraintLeft_toLeftOf="@id/iv_head"
            app:layout_constraintRight_toRightOf="@id/iv_head"
            android:text="@string/login_register"
            style="@style/Tv12white"/>

    <com.flyco.roundview.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/px40"
            android:layout_marginRight="@dimen/px40"
            app:layout_constraintTop_toBottomOf="@id/iv_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:rv_cornerRadius="@dimen/px10"
            app:rv_backgroundColor="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_collect"
                style="@style/Tv13gray"
                android:padding="@dimen/px20"
                android:gravity="left|center"
                android:drawablePadding="@dimen/px20"
                android:text="@string/collection"
                android:drawableRight="@mipmap/y45"
                android:drawableLeft="@mipmap/y46"
                android:layout_width="match_parent"
                android:textColor="@color/black_121212"/>

        <View
                style="@style/divider_1"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_follow"
                style="@style/Tv13gray"
                android:padding="@dimen/px20"
                android:gravity="left|center"
                android:drawablePadding="@dimen/px20"
                android:text="@string/follow"
                android:drawableRight="@mipmap/y45"
                android:drawableLeft="@mipmap/y44"
                android:layout_width="match_parent"
                android:textColor="@color/black_121212"/>

        <View
                style="@style/divider_1"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_history"
                style="@style/Tv13gray"
                android:padding="@dimen/px20"
                android:gravity="left|center"
                android:drawablePadding="@dimen/px20"
                android:text="@string/history"
                android:drawableRight="@mipmap/y45"
                android:drawableLeft="@mipmap/y47"
                android:layout_width="match_parent"
                android:textColor="@color/black_121212"/>

        <View
                style="@style/divider_1"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_about"
                style="@style/Tv13gray"
                android:padding="@dimen/px20"
                android:gravity="left|center"
                android:drawablePadding="@dimen/px20"
                android:text="@string/contact"
                android:drawableRight="@mipmap/y45"
                android:drawableLeft="@mipmap/y48"
                android:layout_width="match_parent"
                android:textColor="@color/black_121212"/>

        <View
                style="@style/divider_1"/>

    </com.flyco.roundview.RoundLinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>